# solid-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
config/: example.yml
data/: sample_readings.csv
docs/: architecture.md  data.md  usage.md
examples/: simulate_and_report.py
scripts/: run_sample.sh
src/solid_engine/: __init__.py  batch_processor.py  cli.py  config_loader.py  constants.py  filters.py  metrics.py  models.py  report.py  simulation.py  statistics.py  utils.py
tests/: test_metrics.py  test_models.py  test_report.py  test_utils.py
